# LegacyEditor

./: .gdbinit  .gitignore  .gitmodules  1.13_Test_In.wii  230918230206.ext  230918230206_in.wii  CMakeLists.txt  LICENSE.md  README.md  a.out  build.bat  build.sh  code.lol  main.cpp  notes.md  todo.md
FigureOutFrom/: AquaticChunkData.hpp  PaletteChunkParser.cpp  PaletteChunkParser.hpp
LegacyEditor/: unit_tests.hpp
LegacyEditor/LCE/: BINSupport.hpp  Chunk.cpp  Chunk.hpp  ConsoleParser.cpp  ConsoleParser.hpp  FileInfo.hpp  Region.cpp  Region.hpp  fileListing.cpp  fileListing.hpp  headerUnion.hpp  include.hpp  scripts.hpp
LegacyEditor/code/: include.hpp  scripts.hpp  threaded.cpp
LegacyEditor/scripts/: scripts.hpp
LegacyEditor/utils/: NBT.cpp  NBT.hpp  NBT2.hpp  data.hpp  dataManager.cpp  dataManager.hpp  deflateUsage.hpp  endian.hpp  endian_swap.hpp  enums.hpp  error_status.hpp  file.cpp  file.hpp  mapcolors.hpp  picture.hpp  processor.hpp  stb_image_write.h  stringutils.cpp  stringutils.hpp  threaded.cpp  time.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
code/: include.hpp  scripts.hpp  threaded.cpp  threaded.hpp  unit_tests.hpp
code/BinFile/: BINSupport.cpp  BINSupport.hpp
code/Chunk/: bitAcccessor.hpp  bitChecking.hpp  chunkData.cpp  chunkData.hpp  helpers.hpp  v10.cpp  v10.hpp  v11.cpp  v11.hpp  v12.cpp  v12.hpp  v13.cpp  v13.hpp  vBase.cpp  vBase.hpp
code/ConsoleParser/: ConsoleParser.cpp  ConsoleParser.hpp  NewGenConsoleParser.cpp  NewGenConsoleParser.hpp  PS3.hpp  PS4.hpp  Rpcs3.hpp  SaveLayout.hpp  Switch.hpp  Vita.hpp  WiiU.hpp  Xbox1.hpp  Xbox360BIN.hpp  Xbox360DAT.hpp  headerUnion.hpp  productcodes.hpp
code/DisplayMetadata/: DisplayMetadata.cpp  DisplayMetadata.hpp
code/FileInfo/: FileInfo.cpp  FileInfo.hpp
code/FileListing/: fileListing.cpp  fileListing.hpp  functions.cpp  productcodes.hpp  stateSettings.hpp  writeSettings.hpp
code/Impl/: CacheBinManager.hpp  DisplayMetadata.cpp  DisplayMetadata.hpp  EntityFile.cpp  EntityFile.hpp  level.cpp  level.hpp  levelFile.cpp  levelFile.hpp  map.cpp  mapFile.cpp  mapFile.hpp
code/LCEFile/: LCEFile.cpp  LCEFile.hpp
code/Map/: map.cpp  map.hpp  mapcolors.hpp
code/Region/: ChunkManager.cpp  ChunkManager.hpp  Region.cpp  Region.hpp  RegionCache.cpp  RegionCache.hpp  RegionManager.cpp  RegionManager.hpp  WorldManager.hpp
code/SaveFile/: SaveProject.cpp  SaveProject.hpp  World.cpp  World.hpp  fileListing.cpp  fileListing.hpp  stateSettings.hpp  writeSettings.hpp
code/SaveProject/: SaveProject.cpp  SaveProject.hpp
code/chunk/: chunkData.cpp  chunkData.hpp  chunkHandle.cpp  chunkHandle.hpp
code/convert/: Schematic.hpp  convertChunk.cpp  convertChunk.hpp  convertWorld.hpp
common/: Config.hpp  ConverterConfig.hpp  DataReader.cpp  DataReader.hpp  DataWriter.cpp  DataWriter.hpp  LookerConfig.hpp  NBT.cpp  NBT.hpp  Pos2DTemplate.hpp  Pos2DTemplate.inl  Pos3DTemplate.hpp  Pos3DTemplate.inl  buffer.hpp  data.hpp  dataManager.cpp  dataManager.hpp  error_status.hpp  fixedVector.hpp  fmt.hpp  nbt.cpp  nbt.hpp  nbtutil.hpp  timer.cpp  utils.cpp  utils.hpp
common/RLE/: rle.hpp  rle_nsxps4.hpp  rle_vita.hpp
common/XBOX_LZX/: XDecompress.hpp
common/binfile/: BINSupport.cpp  BINSupport.hpp
common/codec/: XDecompress.hpp
common/data/: DataReader.cpp  DataReader.hpp  DataWriter.cpp  DataWriter.hpp  GetExecutablePath.hpp  buffer.hpp  include.hpp
common/rle/: rle.hpp  rle_grf.hpp  rle_nsxps4.hpp  rle_vita.hpp
common/windows/: force_utf8.hpp
docs/: ChunkData.md  Documentation.md  MCR.md  conversion_details.md  conversion_details.txt  entities.md  items.md  items_to_add.txt  lce_Decompressed_Chunks.md  list of things.md  overall.md  players.md  tile_entities.md  universal_blocks.yaml
dump_wiiu/: DIM-1r.-1.-1.mcr  DIM-1r.-1.0.mcr  DIM-1r.0.-1.mcr  DIM-1r.0.0.mcr  requiredGameRules.grf
dump_wiiu/DIM1/: r.-1.0.mcr  r.0.0.mcr
examples/: batch_convert.cpp  change_world_name.cpp  figure_out_ps3_to_wiiu.cpp  figure_out_rpcs3_1_00.cpp  figure_out_vita_1_00.cpp  full_unit_test.cpp  load_xbox360_bin.cpp  load_xbox360_dat.cpp  read_write_elytra_wiiu.hpp  readvita.cpp  render_slice_of_chunk.cpp  set_block_in_chunk.cpp  superflatTestPS4.cpp  testing_elytra_chunk_reading_writing.cpp  trying_ps4_save.cpp  trying_ps4_save_render.cpp  write_sfo_from_scratch.cpp
include/doctest/: doctest.h
include/ghc/: filesystem.hpp
include/grf/: DecompressionHelpers.hpp  crc.hpp  grf.hpp  grfHeader.hpp  grfReader.hpp  grfWriter.hpp
include/lzx/: lzx.c
include/pfd/: pfd.cpp  pfd.hpp
include/png/: crc.hpp
include/sfo/: sfo.cpp  sfo.hpp  sfoHelper.hpp
include/tinf/: tinf.h  tinflate.c  tinfzlib.c
include/xcompress/: CMakeLists.txt
include/xcompress/include/: lzx_conf.h  xcompress.h  xdecompress.h
include/xcompress/lib/MSVC/: xcompress.lib  xcompress_static.lib
include/zlib-1.2.12/: adler32.c  compress.c  crc32.c  (+6 more)
info/: PaletteChunkParser.cpp  PaletteChunkParser.hpp  items.hpp  switch_stuff
nonsense/: AquaticChunkData.hpp  LCE-universal.cpp  LCE-universal.hpp  PaletteChunkParser.cpp  PaletteChunkParser.hpp  code.lol  switch_stuff
pretty/: editor.py  nbt.py
res/: version.rc
tests/: 230918230206  3_fortnite_world_2  BLANK_SAVE  batch_convert.cpp  batch_looker.cpp  batch_versioner.cpp  change_world_name.cpp  chatgpt_world.cpp  crc_bruteforcer.cpp  create_chest_world.cpp  ensureEntitiesReadWriteSame.cpp  figure_out_ps3_to_wiiu.cpp  figure_out_rpcs3_1_00.cpp  figure_out_vita_1_00.cpp  fortnite_world  fortnite_world_2  full_unit_test.cpp  gemini_world.cpp  getPS3SecureID.cpp  get_chunkV11_working.cpp  load_xbox360_bin.cpp  load_xbox360_dat.cpp  loot_chest_world.cpp  nether  read_write_elytra_wiiu.hpp  readvita.cpp  render_slice_of_chunk.cpp  rleNSXPS4_decompress.cpp  set_block_in_chunk.cpp  superflat  superflatTestPS4.cpp  testGRF.cpp  testing_elytra_chunk_reading_writing.cpp  trying_ps4_save.cpp  trying_ps4_save_render.cpp  write_sfo_from_scratch.cpp
todo/: overall.md  players.md
wiiu_out_recreate_names/: DIM-1r.-1.-1.mcr  DIM-1r.-1.0.mcr  DIM-1r.0.-1.mcr  DIM-1r.0.0.mcr  r.-1.0.mcr  r.0.0.mcr
(+986 files in other folders)
